--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "varlink",
   "displayName": "Varlink",
   "description": "Varlink language support",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "publisher": "bachorp",
   "engines": {
     "vscode": "^1.100.0"
@@ -26,7 +26,11 @@
         "extensions": [
           ".varlink"
         ],
-        "configuration": "./language-configuration.json"
+        "configuration": "./language-configuration.json",
+        "icon": {
+          "light": "./varlink_mono.png",
+          "dark": "./varlink_mono.png"
+        }
       }
     ],
     "grammars": [
