--- a/package.json
+++ b/package.json
@@ -15,6 +15,16 @@
     "type": "git",
     "url": "https://github.com/bachorp/varlink-vscode.git"
   },
+  "files": [
+    "CHANGELOG.md",
+    "language-configuration.json",
+    "LICENSE",
+    "package.json",
+    "README.md",
+    "varlink_mono.png",
+    "varlink.png",
+    "varlink.tmLanguage.json"
+  ],
   "contributes": {
     "languages": [
       {
