--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,7 @@ jobs:
           name: ${{ github.ref_name }}
           files: ${{ steps.package.outputs.vsixPath }}
           fail_on_unmatched_files: true
+          draft: true
 
       - uses: HaaLeo/publish-vscode-extension@ca5561daa085dee804bf9f37fe0165785a9b14db # v2.0.0
         with:
